Fix 403 Forbidden: Use hasAuthority for role checking in SecurityConfig